fix contrast on selected button

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -30,11 +30,13 @@
   background-color: #f5f5f5;
   border: 1px #dddddd solid;
   border-radius: 2px;
-}
-.btn-main:hover {
-  color: #444444;
-  background-color: #e5e5e5;
-  border: 1px #dddddd solid;
+  &:hover,
+  &:active,
+  &.selected {
+    color: #444444;
+    background-color: #dddddd !important;
+    border: 1px #dddddd solid;
+  }
 }
 
 .btn-important {
